fix a few spacing on card views

--- a/frontend/src/components/Navbar.module.scss
+++ b/frontend/src/components/Navbar.module.scss
@@ -27,10 +27,10 @@ button {
   margin-right: 0.4rem;
 }
 
-@media #{media-query(xs)} {
+@media #{media-query(xs)}, #{media-query(ss)} {
   button {
-    font-size: 10px;
-    width: 100px;
+    font-size: 12px;
+    width: 120px;
   }
 }
 
