--- a/frontend/src/components/Table.module.scss
+++ b/frontend/src/components/Table.module.scss
@@ -16,7 +16,7 @@
 @media #{media-query(xs)}, #{media-query(ss)} {
   .container {
     width: 94%;
-    margin: 0 auto;
+    margin: 2rem auto;
   }
 }
 
@@ -136,7 +136,7 @@ img {
   flex-wrap: nowrap;
   align-items: center;
   gap: 16px;
-  margin-bottom: 2rem;
+  margin-bottom: 0.2rem;
 }
 
 @media #{media-query(xs)}, #{media-query(ss)} {
